--- a/solana-payments-sdk/package.json
+++ b/solana-payments-sdk/package.json
@@ -15,7 +15,8 @@
   "description": "",
   "dependencies": {
     "@solana/web3.js": "^1.98.0",
-    "bn.js": "^5.2.1"
+    "bn.js": "^5.2.1",
+    "express": "^4.21.2"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
