--- a/solana-payments-sdk/package.json
+++ b/solana-payments-sdk/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@solana/web3.js": "^1.98.0",
     "bn.js": "^5.2.1",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2"
   },
   "devDependencies": {
